--- a/package.json
+++ b/package.json
@@ -5,8 +5,25 @@
   "private": true,
   "main": "start.js",
   "scripts": {
-    "start": "node --use_strict start.js"
+    "start": "node js/app.js"
   },
   "author": "Ionut-Cristian Florescu <ionut.florescu@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "epilogue": "^0.6.6",
+    "express": "^4.14.0",
+    "restify": "^4.1.1",
+    "sequelize": "^3.23.6",
+    "sqlite3": "^3.1.4",
+    "teacup": "^2.0.0"
+  },
+  "devDependencies": {
+    "coffee-script": "^1.10.0",
+    "gulp": "^3.9.1",
+    "gulp-coffee": "^2.3.2",
+    "gulp-nodemon": "^2.1.0",
+    "gulp-size": "^2.1.0",
+    "gulp-util": "^3.0.7",
+    "run-sequence": "^1.2.2"
+  }
 }
