--- a/package.json
+++ b/package.json
@@ -18,12 +18,29 @@
     "teacup": "^2.0.0"
   },
   "devDependencies": {
+    "bower": "^1.7.9",
+    "chunk-manifest-webpack-plugin": "^0.1.0",
+    "clean-webpack-plugin": "^0.1.10",
+    "coffee-loader": "^0.7.2",
     "coffee-script": "^1.10.0",
+    "css-loader": "^0.23.1",
+    "expose-loader": "^0.7.1",
+    "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
     "gulp-coffee": "^2.3.2",
+    "gulp-compass": "^2.1.0",
     "gulp-nodemon": "^2.1.0",
     "gulp-size": "^2.1.0",
     "gulp-util": "^3.0.7",
-    "run-sequence": "^1.2.2"
+    "html-webpack-plugin": "^2.22.0",
+    "imports-loader": "^0.6.5",
+    "prettyjson": "^1.1.3",
+    "raw-loader": "^0.5.1",
+    "run-sequence": "^1.2.2",
+    "stats-webpack-plugin": "^0.4.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.1",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-dev-server": "^1.14.1"
   }
 }
