--- a/package.json
+++ b/package.json
@@ -18,27 +18,61 @@
     "teacup": "^2.0.0"
   },
   "devDependencies": {
+    "backbone": "^1.3.3",
+    "backbone.localstorage": "^1.1.16",
+    "backbone.marionette": "^2.4.7",
+    "backbone.paginator": "^2.0.5",
+    "backbone.radio": "^1.0.5",
+    "backbone.validation": "^0.7.1",
+    "bootstrap": "^3.3.7",
     "bower": "^1.7.9",
+    "brace": "^0.8.0",
+    "browser-request": "^0.3.3",
     "chunk-manifest-webpack-plugin": "^0.1.0",
     "clean-webpack-plugin": "^0.1.10",
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.10.0",
+    "contentblocks": "^0.1.7",
     "css-loader": "^0.23.1",
+    "d3": "^4.2.0",
     "expose-loader": "^0.7.1",
     "file-loader": "^0.9.0",
+    "font-awesome": "^4.6.3",
+    "fullcalendar": "^2.9.0",
     "gulp": "^3.9.1",
     "gulp-coffee": "^2.3.2",
     "gulp-compass": "^2.1.0",
     "gulp-nodemon": "^2.1.0",
     "gulp-size": "^2.1.0",
     "gulp-util": "^3.0.7",
+    "hallo": "^1.0.2",
     "html-webpack-plugin": "^2.22.0",
+    "imagesloaded": "^4.1.0",
     "imports-loader": "^0.6.5",
+    "jquery": "^3.1.0",
+    "jquery-ui": "^1.12.0",
+    "js-beautify": "^1.6.3",
+    "lazer": "0.0.1",
+    "lodash": "^4.14.1",
+    "marked": "^0.3.6",
+    "masonry-layout": "^4.1.0",
+    "moment": "^2.14.1",
+    "node-ensure": "0.0.0",
+    "p2": "^0.7.1",
+    "parchment": "^1.0.0-beta.9",
+    "phaser": "^2.6.1",
+    "pixi.js": "^3.0.11",
     "prettyjson": "^1.1.3",
+    "rangy": "^1.3.0",
     "raw-loader": "^0.5.1",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
     "run-sequence": "^1.2.2",
+    "sizzle": "^2.3.0",
     "stats-webpack-plugin": "^0.4.0",
+    "underscore": "^1.8.3",
     "url-loader": "^0.5.7",
+    "vie": "^2.1.2",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.14.1"
