--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "vie": "^2.1.2",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "webpack-manifest-plugin": "^1.0.1"
   }
 }
