--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "teacup": "^2.0.0"
   },
   "devDependencies": {
+    "agate": "umeboshi2/agate",
+    "amd-define-factory-patcher-loader": "^1.0.0",
     "backbone": "^1.3.3",
     "backbone.localstorage": "^1.1.16",
     "backbone.marionette": "^2.4.7",
@@ -70,6 +72,7 @@
     "run-sequence": "^1.2.2",
     "sizzle": "^2.3.0",
     "stats-webpack-plugin": "^0.4.0",
+    "style-loader": "^0.13.1",
     "underscore": "^1.8.3",
     "url-loader": "^0.5.7",
     "vie": "^2.1.2",
