--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "openshift-cartridge-nodejs-template",
-  "version": "1.0.1",
-  "description": "Custom Node.js cartridge for OpenShift - sample application",
+  "name": "sunny-server",
+  "version": "0.0.1",
+  "description": "Sunny web application",
   "private": true,
   "main": "start.js",
   "scripts": {
     "start": "node js/app.js"
   },
-  "author": "Ionut-Cristian Florescu <ionut.florescu@gmail.com>",
-  "license": "ISC",
+  "author": "Joseph Rawson <joseph.rawson.works@gmail.com>",
+  "license": "none",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "connect-ensure-login": "^0.1.1",
+    "connect-gzip-static": "^1.0.0",
+    "cookie-parser": "^1.4.3",
     "epilogue": "^0.6.6",
     "express": "^4.14.0",
+    "express-session": "^1.14.0",
     "js-beautify": "^1.6.3",
+    "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "sequelize": "^3.23.6",
@@ -37,6 +42,7 @@
     "clean-webpack-plugin": "^0.1.10",
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.10.0",
+    "compression-webpack-plugin": "^0.3.1",
     "contentblocks": "^0.1.7",
     "css-loader": "^0.23.1",
     "d3": "^4.2.0",
