--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.3",
     "epilogue": "^0.6.6",
     "express": "^4.14.0",
+    "express-https-redirect": "^1.0.0",
     "express-session": "^1.14.0",
     "js-beautify": "^1.6.3",
     "morgan": "^1.7.0",
