--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Joseph Rawson <joseph.rawson.works@gmail.com>",
   "license": "none",
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "connect-ensure-login": "^0.1.1",
     "connect-gzip-static": "^1.0.0",
