--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Joseph Rawson <joseph.rawson.works@gmail.com>",
   "license": "none",
   "dependencies": {
-    "bcrypt": "^0.8.7",
+    "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
     "connect-ensure-login": "^0.1.1",
     "connect-gzip-static": "^1.0.0",
@@ -21,6 +21,7 @@
     "express-session": "^1.14.0",
     "js-beautify": "^1.6.3",
     "morgan": "^1.7.0",
+    "node-gyp": "^3.4.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "sequelize": "^3.23.6",
